@@ -1,3 +1,9 @@
+2014-07-23  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/agentes/agent_wizard.snmp_explorer.php,
+	godmode/agentes/module_manager_editor_plugin.php: some fixes for
+	the snmp version 3.
+
 2014-07-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
         * include/ajax/events.php: Fixed custom fields view in
